# task-api

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/skills/fastapi-expert/: SKILL.md
.claude/skills/fastapi-expert/references/: authentication.md  background-tasks.md  cors-config.md  exception-handling.md  file-uploads.md  project-structure.md  pydantic-patterns.md  rate-limiting.md  testing.md  (+1 more)
.claude/skills/pytest-expert/: SKILL.md
.claude/skills/skill-creator-pro/: SKILL.md
.claude/skills/sqlmodel-production/: SKILL.md
.specify/memory/: constitution.md
history/prompts/001-task-api/: 0001-create-task-management-api-specification.spec.prompt.md  0002-execute-implementation-planning-workflow.plan.prompt.md  0003-generate-implementation-tasks-tdd.tasks.prompt.md  0004-implement-task-api-with-tdd.green.prompt.md
history/prompts/constitution/: 0001-initialize-project-constitution.constitution.prompt.md
specs/001-task-api/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-task-api/checklists/: requirements.md
specs/001-task-api/contracts/: endpoints.md  openapi.yaml
src/: config.py  database.py  exceptions.py  main.py
src/api/: __init__.py  tasks.py
src/models/: task.py
src/schemas/: __init__.py  task.py
src/services/: task_service.py
tests/: conftest.py
tests/contract/: test_create_task.py  test_delete_task.py  test_get_task.py  test_list_tasks.py  test_update_task.py
tests/integration/: test_task_flow.py
tests/unit/: test_task_model.py  test_task_schemas.py  test_task_service.py
(+11 files in other folders)
